.gitignore updated + swagger.json updated
